TFP-5375: Legger til mer data fra skatt for visning i GUI (#3899)
* TFP-5375: Legger til mer data fra skatt for visning i GUI

* MAX / MIN

* Endring etter qa